Wed Feb 27 13:18:49 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (READ_DATA_PENDING): uClibc support.

	* random.c (rand_init): ditto.

	* ext/socket/{addinfo.h,getaddrinfo.c} (gai_strerror): ditto.

Wed Feb 27 07:08:16 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.c: Merge from rough.  Fix a couple of
	  off-by-one errors in Aaron Gifford's code.

	  Obtained from:  KAME via FreeBSD
	  KAME PR:        393
	  FreeBSD PR:     kern/34242

Tue Feb 26 21:36:01 2002  Usaku Nakamura <usa@ruby-lang.org>

	* bignum.c (rb_big_2comp): void function cannot return any value.

Tue Feb 26 11:25:50 2002  akira yamada  <akira@arika.org>

	* lib/uri/generic.rb: merge0 shuld return [oth, oth] if oth is
	  absolute URI. 

	* lib/uri/generic.rb: registry part must not be allowed for any
	  schemes for the Internet. (RFC2396, section 3.2.2 and 3.2.1.) 

Mon Feb 25 21:28:46 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Merge from rough.  Turn Syslog into a
	  module keeping backward compatibility intact.

Mon Feb 25 19:35:48 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* process.c (rb_syswait): argument order of rb_waitpid() inverted.

	* sample/test.rb (system): test with scripts under the source
	  directory.

Mon Feb 25 13:32:13 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/shell.rb (Shell::expand_path): relative to @cwd.

Sun Feb 24 17:20:50 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/*.h: Merge from rough.
	  - Avoid namespace pollution. (MD5_* -> rb_Digest_MD5_*, etc.)

Sat Feb 23 21:12:13 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_syswait): thread kludge; should be fixed to
	  support native thread.

Fri Feb 22 22:00:08 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb: set read_timeout dynamically.

Fri Feb 22 19:59:33 2002  Usaku Nakamura <usa@ruby-lang.org>

	* win32/config.status.in: set LIBRUBY_SO.
