@@ -4082,7 +4082,7 @@ rb_f_missing(argc, argv, obj)
     VALUE *argv;
     VALUE obj;
 {
-    ID    id;
+    ID id, noclass;
     volatile VALUE d = 0;
     char *format = 0;
     char *desc = "";
@@ -4096,17 +4096,16 @@ rb_f_missing(argc, argv, obj)
     rb_stack_check();
 
     id = SYM2ID(argv[0]);
-    argc--; argv++;
 
     switch (TYPE(obj)) {
       case T_NIL:
-	format = "undefined method `%s' for nil";
+	desc = "nil";
 	break;
       case T_TRUE:
-	format = "undefined method `%s' for true";
+	desc = "true";
 	break;
       case T_FALSE:
-	format = "undefined method `%s' for false";
+	desc = "false";
 	break;
       case T_OBJECT:
 	d = rb_any_to_s(obj);
@@ -4116,26 +4115,27 @@ rb_f_missing(argc, argv, obj)
 	break;
     }
     if (d) {
-	if (last_call_status & CSTAT_PRIV) {
-	    format = "private method `%s' called for %s%s%s";
-	}
-	if (last_call_status & CSTAT_PROT) {
-	    format = "protected method `%s' called for %s%s%s";
-	}
-	else if (last_call_status & CSTAT_VCALL) {
-	    const char *mname = rb_id2name(id);
-
-	    if (('a' <= mname[0] && mname[0] <= 'z') || mname[0] == '_') {
-		format = "undefined local variable or method `%s' for %s%s%s";
-	    }
-	}
-	if (!format) {
-	    format = "undefined method `%s' for %s%s%s";
-	}
 	if (RSTRING(d)->len > 65) {
 	    d = rb_any_to_s(obj);
 	}
 	desc = RSTRING(d)->ptr;
+    }
+
+    if (last_call_status & CSTAT_PRIV) {
+	format = "private method `%s' called for %s%s%s";
+    }
+    if (last_call_status & CSTAT_PROT) {
+	format = "protected method `%s' called for %s%s%s";
+    }
+    else if (last_call_status & CSTAT_VCALL) {
+	const char *mname = rb_id2name(id);
+
+	if (('a' <= mname[0] && mname[0] <= 'z') || mname[0] == '_') {
+	    format = "undefined local variable or method `%s' for %s%s%s";
+	}
+    }
+    if (!format) {
+	format = "undefined method `%s' for %s%s%s";
     }
 
     ruby_sourcefile = file;
@@ -4143,9 +4143,10 @@ rb_f_missing(argc, argv, obj)
     PUSH_FRAME();		/* fake frame */
     *ruby_frame = *_frame.prev->prev;
 
+    noclass = (!d || desc[0]=='#');
     rb_raise(rb_eNameError, format, rb_id2name(id),
-	     desc, desc[0]=='#'?"":":",
-	     desc[0]=='#'?"":rb_class2name(CLASS_OF(obj)));
+	     desc, noclass ? "" : ":",
+	     noclass ? "" : rb_class2name(CLASS_OF(obj)));
     POP_FRAME();
 
     return Qnil;		/* not reached */
