@@ -617,6 +617,7 @@ rb_syswait(pid)
 	signal(SIGQUIT, qfunc);
 #endif
 	signal(SIGINT, ifunc);
+	overriding = Qfalse;
     }
 }
 
